tethysapp/timeseries_viewer/public/css/main.css
#url_name {
width:700px;
}
#url_name.form-control{
    width:1000px;
}
#input_group{
    width:100px;
}
#metadata-list {
     font-size:20px;
}
#metadata-list ul {
    font-size:16px;
}
#app-content-wrapper{
	overflow:inherit !important;
}

#app-header .tethys-app-header .icon-wrapper img
{
    height:50px;
    width:250px;
    border-radius: 0%;
	background: rgba(211, 211, 211, 1) !important;
}
#app-header .tethys-app-header {
    background: rgba(211, 211, 211, 1) !important;
    height: 50px !important;
    border-bottom: 2px solid black !important;
}
#app-header .tethys-app-header .app-title-wrapper .app-title{
    padding: 0px 0px 20px 500px !important;
}
#app-header .toggle-nav{
display:none !important;
}

#app-header .tethys-app-header .app-title-wrapper .app-title{
    padding: 20px 0px 20px 500px;
}
#app-content.show-app-content
{
	padding-top: 60px !important;
}
#app-content-wrapper #app-content #app-navigation {
  left: -350px;
  width: 0px;
  height:100%;
}

#app-content-wrapper.show-nav #app-content {
  padding-right: 0px;
  -webkit-transform: translateX(0px);
  -moz-transform: translateX(0px);
  -ms-transform: translateX(0px);
  -o-transform: translateX(0px);
  transform: translateX(0px);
  -webkit-transform: translate3d(0px, 0, 0);
  -moz-transform: translate3d(0px, 0, 0);
  -ms-transform: translate3d(0px, 0, 0);
  -o-transform: translate3d(0px, 0, 0);
   transform: translate3d(0px, 0, 0);
}
#app-header .tethys-app-header .icon-wrapper img{
    height: 48px !important;
}
#app-header .tethys-app-header .icon-wrapper {
    padding: 0px !important;
}
#title {
    color: #ff2283;
}

#byu-logo-container {
    float: left;
    position: absolute;
    bottom: 8px;
}
#byu-logo-container img {
    float: left;
    height: 50px;
    width: 50px;
}
#byu-logo-container span {
    position: relative;
    top: 25px;
    margin-left: 10px;
}


#metadata_test1{
    font-size:20px;
}


#images_container{
    display: block;
    margin-left: auto;
    margine-right: auto;
    text-align:center;
}
td.details-control {
    background:  url('open1.png') no-repeat center center;
    cursor: pointer;
}
tr.shown td.details-control {
	background: url('close1.png') no-repeat center center;
}
#example_length{
	visibility: hidden;
}
#example_filter{
	visibility: hidden;
}
#example_info{
	visibility: hidden;
}
#example_paginate{
	visibility: hidden;
}

#chartDiv{
	width:100% !important;
	height:100% !important;


}
#chart_cont{
	width:100% !important;
	height:100% !important;
}
#loading{
	/*display: block !important;*/
    width: 300px;
	height: 300px;
	position: absolute;
	top:0;
	bottom: 0;
	left: 0;
	right: 0;
	margin: auto;
}
.cssload-loader * {
	box-sizing: border-box;
		-o-box-sizing: border-box;
		-ms-box-sizing: border-box;
		-webkit-box-sizing: border-box;
		-moz-box-sizing: border-box;
}

.cssload-loader {
	position: absolute;
	left: 50%;

	width: 195px;
	height: 195px;

	margin-top: -97px;
	margin-left: -97px;

	perspective: 97px;
		-o-perspective: 97px;
		-ms-perspective: 97px;
		-webkit-perspective: 97px;
		-moz-perspective: 97px;
	transform-type: preserve-3d;
		-o-transform-type: preserve-3d;
		-ms-transform-type: preserve-3d;
		-webkit-transform-type: preserve-3d;
		-moz-transform-type: preserve-3d;

	animation: cssload-loader 6.9s cubic-bezierrgb(0,0,0) infinite;
		-o-animation: cssload-loader 6.9s cubic-bezierrgb(0,0,0) infinite;
		-ms-animation: cssload-loader 6.9s cubic-bezierrgb(0,0,0) infinite;
		-webkit-animation: cssload-loader 6.9s cubic-bezierrgb(0,0,0) infinite;
		-moz-animation: cssload-loader 6.9s cubic-bezierrgb(0,0,0) infinite;
}




.cssload-dot {
	position: absolute;
	top: 50%;
	left: 50%;
	z-index: 10;

	width: 19px;
	height: 19px;

	margin-top: -88px;
	margin-left: -10px;

	border-radius: 10px;

	background-color: rgb(30,63,87);

	transform-type: preserve-3d;
		-o-transform-type: preserve-3d;
		-ms-transform-type: preserve-3d;
		-webkit-transform-type: preserve-3d;
		-moz-transform-type: preserve-3d;
	transform-origin: 50% 88px;
		-o-transform-origin: 50% 88px;
		-ms-transform-origin: 50% 88px;
		-webkit-transform-origin: 50% 88px;
		-moz-transform-origin: 50% 88px;
	transform: rotateZ(30deg);
		-o-transform: rotateZ(30deg);
		-ms-transform: rotateZ(30deg);
		-webkit-transform: rotateZ(30deg);
		-moz-transform: rotateZ(30deg);

	animation: cssload-dot1 1.73s cubic-bezier(.6,0,.4,1) infinite;
		-o-animation: cssload-dot1 1.73s cubic-bezier(.6,0,.4,1) infinite;
		-ms-animation: cssload-dot1 1.73s cubic-bezier(.6,0,.4,1) infinite;
		-webkit-animation: cssload-dot1 1.73s cubic-bezier(.6,0,.4,1) infinite;
		-moz-animation: cssload-dot1 1.73s cubic-bezier(.6,0,.4,1) infinite;
}

.cssload-dot:nth-child(2) {
	transform: rotateZ(15deg);
		-o-transform: rotateZ(15deg);
		-ms-transform: rotateZ(15deg);
		-webkit-transform: rotateZ(15deg);
		-moz-transform: rotateZ(15deg);
	animation-name: cssload-dot2;
		-o-animation-name: cssload-dot2;
		-ms-animation-name: cssload-dot2;
		-webkit-animation-name: cssload-dot2;
		-moz-animation-name: cssload-dot2;
	animation-delay: 172.5ms;
		-o-animation-delay: 172.5ms;
		-ms-animation-delay: 172.5ms;
		-webkit-animation-delay: 172.5ms;
		-moz-animation-delay: 172.5ms;
	background-color: rgb(45,85,109);
}

.cssload-dot:nth-child(3) {
	transform: rotateZ(0deg);
		-o-transform: rotateZ(0deg);
		-ms-transform: rotateZ(0deg);
		-webkit-transform: rotateZ(0deg);
		-moz-transform: rotateZ(0deg);
	animation-name: cssload-dot3;
		-o-animation-name: cssload-dot3;
		-ms-animation-name: cssload-dot3;
		-webkit-animation-name: cssload-dot3;
		-moz-animation-name: cssload-dot3;
	animation-delay: 345ms;
		-o-animation-delay: 345ms;
		-ms-animation-delay: 345ms;
		-webkit-animation-delay: 345ms;
		-moz-animation-delay: 345ms;
	background-color: rgb(68,120,145);
}

.cssload-dot:nth-child(4) {
	transform: rotateZ(-15deg);
		-o-transform: rotateZ(-15deg);
		-ms-transform: rotateZ(-15deg);
		-webkit-transform: rotateZ(-15deg);
		-moz-transform: rotateZ(-15deg);
	animation-name: cssload-dot4;
		-o-animation-name: cssload-dot4;
		-ms-animation-name: cssload-dot4;
		-webkit-animation-name: cssload-dot4;
		-moz-animation-name: cssload-dot4;
	animation-delay: 517.5ms;
		-o-animation-delay: 517.5ms;
		-ms-animation-delay: 517.5ms;
		-webkit-animation-delay: 517.5ms;
		-moz-animation-delay: 517.5ms;
	background-color: rgb(89,152,178);
}

.cssload-dot:nth-child(5) {
	transform: rotateZ(-30deg);
		-o-transform: rotateZ(-30deg);
		-ms-transform: rotateZ(-30deg);
		-webkit-transform: rotateZ(-30deg);
		-moz-transform: rotateZ(-30deg);
	animation-name: cssload-dot5;
		-o-animation-name: cssload-dot5;
		-ms-animation-name: cssload-dot5;
		-webkit-animation-name: cssload-dot5;
		-moz-animation-name: cssload-dot5;
	animation-delay: 690ms;
		-o-animation-delay: 690ms;
		-ms-animation-delay: 690ms;
		-webkit-animation-delay: 690ms;
		-moz-animation-delay: 690ms;
	background-color: rgb(107,178,205);
}











@keyframes cssload-loader {
	0% {
		transform: rotateX(30deg) rotateZ(0deg);
	}
	100% {
		transform: rotateX(30deg) rotateZ(-360deg);
	}
}

@-o-keyframes cssload-loader {
	0% {
		-o-transform: rotateX(30deg) rotateZ(0deg);
	}
	100% {
		-o-transform: rotateX(30deg) rotateZ(-360deg);
	}
}

@-ms-keyframes cssload-loader {
	0% {
		-ms-transform: rotateX(30deg) rotateZ(0deg);
	}
	100% {
		-ms-transform: rotateX(30deg) rotateZ(-360deg);
	}
}

@-webkit-keyframes cssload-loader {
	0% {
		-webkit-transform: rotateX(30deg) rotateZ(0deg);
	}
	100% {
		-webkit-transform: rotateX(30deg) rotateZ(-360deg);
	}
}

@-moz-keyframes cssload-loader {
	0% {
		-moz-transform: rotateX(30deg) rotateZ(0deg);
	}
	100% {
		-moz-transform: rotateX(30deg) rotateZ(-360deg);
	}
}

@keyframes cssload-dot1 {
	0% {
		transform: rotateZ(30deg) rotateX(10deg);
	}
	95%, 100% {
		transform: rotateZ(390deg) rotateX(10deg);
	}
}

@-o-keyframes cssload-dot1 {
	0% {
		-o-transform: rotateZ(30deg) rotateX(10deg);
	}
	95%, 100% {
		-o-transform: rotateZ(390deg) rotateX(10deg);
	}
}

@-ms-keyframes cssload-dot1 {
	0% {
		-ms-transform: rotateZ(30deg) rotateX(10deg);
	}
	95%, 100% {
		-ms-transform: rotateZ(390deg) rotateX(10deg);
	}
}

@-webkit-keyframes cssload-dot1 {
	0% {
		-webkit-transform: rotateZ(30deg) rotateX(10deg);
	}
	95%, 100% {
		-webkit-transform: rotateZ(390deg) rotateX(10deg);
	}
}

@-moz-keyframes cssload-dot1 {
	0% {
		-moz-transform: rotateZ(30deg) rotateX(10deg);
	}
	95%, 100% {
		-moz-transform: rotateZ(390deg) rotateX(10deg);
	}
}

@keyframes cssload-dot2 {
	0% {
		transform: rotateZ(15deg) rotateX(10deg);
	}
	95%, 100% {
		transform: rotateZ(375deg) rotateX(10deg);
	}
}

@-o-keyframes cssload-dot2 {
	0% {
		-o-transform: rotateZ(15deg) rotateX(10deg);
	}
	95%, 100% {
		-o-transform: rotateZ(375deg) rotateX(10deg);
	}
}

@-ms-keyframes cssload-dot2 {
	0% {
		-ms-transform: rotateZ(15deg) rotateX(10deg);
	}
	95%, 100% {
		-ms-transform: rotateZ(375deg) rotateX(10deg);
	}
}

@-webkit-keyframes cssload-dot2 {
	0% {
		-webkit-transform: rotateZ(15deg) rotateX(10deg);
	}
	95%, 100% {
		-webkit-transform: rotateZ(375deg) rotateX(10deg);
	}
}

@-moz-keyframes cssload-dot2 {
	0% {
		-moz-transform: rotateZ(15deg) rotateX(10deg);
	}
	95%, 100% {
		-moz-transform: rotateZ(375deg) rotateX(10deg);
	}
}

@keyframes cssload-dot3 {
	0% {
		transform: rotateZ(0deg) rotateX(10deg);
	}
	95%, 100% {
		transform: rotateZ(360deg) rotateX(10deg);
	}
}

@-o-keyframes cssload-dot3 {
	0% {
		-o-transform: rotateZ(0deg) rotateX(10deg);
	}
	95%, 100% {
		-o-transform: rotateZ(360deg) rotateX(10deg);
	}
}

@-ms-keyframes cssload-dot3 {
	0% {
		-ms-transform: rotateZ(0deg) rotateX(10deg);
	}
	95%, 100% {
		-ms-transform: rotateZ(360deg) rotateX(10deg);
	}
}

@-webkit-keyframes cssload-dot3 {
	0% {
		-webkit-transform: rotateZ(0deg) rotateX(10deg);
	}
	95%, 100% {
		-webkit-transform: rotateZ(360deg) rotateX(10deg);
	}
}

@-moz-keyframes cssload-dot3 {
	0% {
		-moz-transform: rotateZ(0deg) rotateX(10deg);
	}
	95%, 100% {
		-moz-transform: rotateZ(360deg) rotateX(10deg);
	}
}

@keyframes cssload-dot4 {
	0% {
		transform: rotateZ(-15deg) rotateX(10deg);
	}
	95%, 100% {
		transform: rotateZ(345deg) rotateX(10deg);
	}
}

@-o-keyframes cssload-dot4 {
	0% {
		-o-transform: rotateZ(-15deg) rotateX(10deg);
	}
	95%, 100% {
		-o-transform: rotateZ(345deg) rotateX(10deg);
	}
}

@-ms-keyframes cssload-dot4 {
	0% {
		-ms-transform: rotateZ(-15deg) rotateX(10deg);
	}
	95%, 100% {
		-ms-transform: rotateZ(345deg) rotateX(10deg);
	}
}

@-webkit-keyframes cssload-dot4 {
	0% {
		-webkit-transform: rotateZ(-15deg) rotateX(10deg);
	}
	95%, 100% {
		-webkit-transform: rotateZ(345deg) rotateX(10deg);
	}
}

@-moz-keyframes cssload-dot4 {
	0% {
		-moz-transform: rotateZ(-15deg) rotateX(10deg);
	}
	95%, 100% {
		-moz-transform: rotateZ(345deg) rotateX(10deg);
	}
}

@keyframes cssload-dot5 {
	0% {
		transform: rotateZ(-30deg) rotateX(10deg);
	}
	95%, 100% {
		transform: rotateZ(330deg) rotateX(10deg);
	}
}

@-o-keyframes cssload-dot5 {
	0% {
		-o-transform: rotateZ(-30deg) rotateX(10deg);
	}
	95%, 100% {
		-o-transform: rotateZ(330deg) rotateX(10deg);
	}
}

@-ms-keyframes cssload-dot5 {
	0% {
		-ms-transform: rotateZ(-30deg) rotateX(10deg);
	}
	95%, 100% {
		-ms-transform: rotateZ(330deg) rotateX(10deg);
	}
}

@-webkit-keyframes cssload-dot5 {
	0% {
		-webkit-transform: rotateZ(-30deg) rotateX(10deg);
	}
	95%, 100% {
		-webkit-transform: rotateZ(330deg) rotateX(10deg);
	}
}

@-moz-keyframes cssload-dot5 {
	0% {
		-moz-transform: rotateZ(-30deg) rotateX(10deg);
	}
	95%, 100% {
		-moz-transform: rotateZ(330deg) rotateX(10deg);
	}
}

